# photo-tool

./: .gitignore  Cargo.toml  README.md  plan.md  spec.md
crates/photo-cli/: Cargo.toml
crates/photo-cli/src/: main.rs
crates/photo-core/: Cargo.toml
crates/photo-core/src/: batch.rs  c2pa_metadata.rs  compose.rs  convert.rs  error.rs  formats.rs  gif.rs  gpano_xmp.rs  image_io.rs  lib.rs  panorama360.rs  resize.rs  transform.rs
crates/photo-core/tests/: core_workflows.rs
crates/photo-tool/: Cargo.toml
crates/photo-tool/src/: app.rs  fonts.rs  main.rs
scripts/: build-release.ps1
