[workspace]
members = [
    "crates/photo-core",
    "crates/photo-cli",
    "crates/photo-tool",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
ab_glyph = "0.2.32"
anyhow = "1.0.100"
arboard = "3.6.1"
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
eframe = "0.34.2"
egui = "0.34.2"
image = { version = "0.25.10", default-features = false, features = ["bmp", "jpeg", "png", "tiff", "webp"] }
imageproc = "0.26.2"
rayon = "1.11.0"
rfd = "0.15.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
walkdir = "2.5.0"
