[package]
name = "photo-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ab_glyph.workspace = true
c2pa.workspace = true
image.workspace = true
imageproc.workspace = true
rayon.workspace = true
serde_json.workspace = true
thiserror.workspace = true
walkdir.workspace = true
